Fixed panel links failing on large screens - #resume-link (a href) had padding 20%, overlapping links on panels above on larger screens - Removed padding 20%, replaced with margin-bottom: 20%; on enclosing element (div)

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@
 
 #resume {
     margin-top: 5%;
+    margin-bottom: 20%;
     display: none;
 }
 
@@ -87,5 +88,4 @@
     font-family: 'Segoe UI';
     font-family: 'Lato', sans-serif;
     font-size: 1.75vw;
-    padding: 20%;
 }
